--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body ng-app="ShoppingListCheckOff">
     <div class="row">
       <div class="col-md-6" ng-controller = "ToBuyController as ToBuy">
-        <h4>Shopping List:</h4>
+        <h3 class="strong-text">Shopping List:</h3>
         <ul>
           <li ng-repeat="item in ToBuy.buyItems">
             {{item.name}} : {{item.quantity}}
@@ -22,7 +22,7 @@
       </div>
 
       <div class="col-md-6" ng-controller = "AlreadyBoughtController as AlreadyBought">
-        <h4>Shopping Cart: </h4>
+        <h3 class="strong-text">Shopping Cart: </h3>
         <ul>
           <li ng-repeat = "item in AlreadyBought.boughtItems">
             {{item.name}}: {{item.quantity}}
