--- a/index.html
+++ b/index.html
@@ -3,35 +3,56 @@
 
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Shopping List Check Off</title>
     <script src="angular.min.js"></script>
     <script src="app.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <style>
+      .emptyMessage {
+        font-weight: bold;
+        color: red;
+        font-size: 1.2em;
+      }
+      li {
+        margin-bottom: 7px;
+        font-size: 1.2em;
+      }
+      li > button {
+        margin-left: 6px;
+      }
+      button > span {
+        color: green;
+      }
+    </style>
   </head>
 
   <body ng-app="ShoppingListCheckOff">
+    <div class="container">
+      <h1>Shopping List Check Off</h1>
     <div class="row">
-      <div class="col-md-6" ng-controller = "ToBuyController as ToBuy">
-        <h3 class="strong-text">Shopping List:</h3>
-        <ul>
-          <li ng-repeat="item in ToBuy.buyItems">
-            {{item.name}} : {{item.quantity}}
-            <button class="btn btn-primary" ng-click="ToBuy.BuyAnItem($index);">Buy</button>
-          </li>
-        </ul>
-        <div ng-if="ToBuy.buyItems.length==0">Everything is bought!</div>
-      </div>
 
-      <div class="col-md-6" ng-controller = "AlreadyBoughtController as AlreadyBought">
-        <h3 class="strong-text">Shopping Cart: </h3>
-        <ul>
-          <li ng-repeat = "item in AlreadyBought.boughtItems">
-            {{item.name}}: {{item.quantity}}
-          </li>
-        </ul>
-        <div ng-if="AlreadyBought.boughtItems.length==0">Nothing bought yet!</div>
-      </div>
+    <!-- To Buy List -->
+    <div class="col-md-6" ng-controller = "ToBuyController as ToBuy">
+     <h2>To Buy:</h2>
+     <ul>
+       <li ng-repeat="item in ToBuy.buyItems">
+         Buy {{item.quantity}} {{item.name}} <button class="btn btn-default" ng-click="ToBuy.BuyAnItem($index);"><span class="glyphicon glyphicon-ok"></span> Bought</button>
+       </li>
+     </ul>
+     <div class="emptyMessage" ng-if="ToBuy.buyItems.length==0">Everything is bought!</div>
     </div>
 
+    <!-- Already Bought List -->
+    <div class="col-md-6" ng-controller = "AlreadyBoughtController as AlreadyBought">
+     <h2>Already Bought:</h2>
+     <ul>
+       <li ng-repeat = "item in AlreadyBought.boughtItems">Bought {{item.quantity}} {{item.name}}</li>
+     </ul>
+     <div class="emptyMessage" ng-if="AlreadyBought.boughtItems.length==0">Nothing bought yet.</div>
+    </div>
+  </div>
+</div>
+</div>
   </body>
 
 </html>
